# libs

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
cmake/modules/: CompilerFlags.cmake  libsinsp.cmake  zlib.cmake
docs/: report.md
driver/: event_table.c  flags_table.c  ppm_events_public.h  ppm_fillers.c  ppm_flag_helpers.h  syscall_table.c
driver/bpf/: fillers.h
test/libsinsp_e2e/: CMakeLists.txt  capture_to_file_test.cpp  event_capture.cpp  event_capture.h  event_thread.h  forking.cpp  fs.cpp  main.cpp  paths.cpp  process.cpp  refactor.cpp  subprocess.cpp  subprocess.h  suppress_events.cpp  sys_call_test.cpp  tcp_client_server.cpp  tcp_client_server_ipv4_mapped.cpp  threadinfo.cpp  udp_client_server.cpp  unix_client_server.cpp
test/libsinsp_e2e/fake_cri/: CMakeLists.txt  fake_cri_agent_images.pb  fake_cri_agent_listcontainers.pb  fake_cri_crio_listcontainers.pb  fake_cri_crio_pod.pb
userspace/libscap/: CMakeLists.txt  scap.c  userspace_flag_helpers.h
userspace/libsinsp/: CMakeLists.txt  consts.h  container.cpp  container.h  container_info.cpp  container_info.h  cri.h  cri.hpp  cri_settings.cpp  dns_manager.cpp  dns_manager.h  dumper.cpp  event.cpp  event.h  eventformatter.cpp  eventformatter.h  fdinfo.cpp  fdinfo.h  filter.cpp  filter.h  filter_check_list.cpp  filterchecks.cpp  gvisor_config.cpp  ifinfo.cpp  ifinfo.h  logger.cpp  logger.h  metrics_collector.h  mutex.h  parsers.cpp  parsers.h  plugin.cpp  plugin_filtercheck.cpp  prefix_search.cpp  procfs_utils.cpp  procfs_utils.h  runc.cpp  sinsp.cpp  sinsp.h  sinsp_cycledumper.cpp  (+33 more)
(+27 files in other folders)
